--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,39 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "eslint:recommended", "standard"],
+  "plugins": ["react"],
+  "rules": {
+    "quotes": "off",
+    "react/prop-types": 2,
+    "react-hooks/exhaustive-deps": "off",
+    "space-before-function-paren": [
+      "error",
+      {
+        "anonymous": "never",
+        "named": "never",
+        "asyncArrow": "always"
+      }
+    ],
+    "multiline-ternary": ["error", "never"],
+    "react/react-in-jsx-scope": "off",
+    "react/no-unknown-property": [
+      2,
+      {
+        "ignore": [
+          "jsx",
+          "amp-custom",
+          "global",
+          "on",
+          "custom-element",
+          "custom-template",
+          "option",
+          "on",
+          "items",
+          "fallback",
+          "update",
+          "item"
+        ]
+      }
+    ]
+  },
+  "root": true
 }
